<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:id="@+id/list_item_thumbnail"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rowTxt"
        android:id="@+id/list_item_text"
        android:layout_toEndOf="@+id/list_item_thumbnail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_alignParentRight="true"
        android:id="@+id/list_item_btn"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/content_padding_normal"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text"
                android:imeOptions="actionDone"/>


        </android.support.design.widget.TextInputLayout>
    </FrameLayout>

</RelativeLayout>

